--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -8,37 +8,38 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ciulloandy.holamundo.MainActivity"
-    android:background="@drawable/marcianito_miprimer_proyecto_android"
-    android:backgroundTintMode="screen">
+    android:background="@android:color/holo_blue_light">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/titulo_app"
-        android:id="@+id/textView"
-        android:textSize="@dimen/abc_text_size_large_material"
-        android:textColor="@color/abc_primary_text_disable_only_material_dark"
+        android:id="@+id/imageView"
+        android:src="@drawable/marcianito_miprimer_proyecto_android"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/button2"
-        android:layout_alignEnd="@+id/button2"
-        android:layout_marginTop="43dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/boton"
-        android:id="@+id/button2"
-        android:layout_below="@+id/textView"
+        android:id="@+id/button"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="119dp" />
+        android:textColor="@android:color/white" />
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@drawable/marcianito_miprimer_proyecto_android"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/titulo_app"
+        android:id="@+id/textView2"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginTop="35dp"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
